# test_metal

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: camera_interface.h  context.h  gamepad.h  matrix.h  testloop.h
shader/: default.metal  prim2d.metal  prim3d.metal  simple2d.metal
src/: gamepad.mm  main.cpp  testloop.cpp
src/metalapp/: app.cpp  app.h  camera.cpp  camera.h  impl.cpp  shaderset.cpp  shaderset.h  simple2d.cpp  simple2d.h  simple3d.cpp  simple3d.h  textdraw.cpp  textdraw.h  texture.cpp  texture.h  vertex.cpp  vertex.h
